fixed filter and listing alignment to be much cleaner and include the average rating

--- a/css/main.css
+++ b/css/main.css
@@ -104,11 +104,14 @@ nav {
 
 .card {
     display: flex;
+    width: 100%;
     box-sizing: border-box;
-    justify-content: space-around;
+    justify-content: space-between;
+    flex-direction: row;
 }
 
 .card-link {
+    display: inline-block;
     position: relative;
     background: rgb(189, 234, 255);
     width: 100%;
@@ -132,17 +135,22 @@ nav {
     color: black;
 }
 
-
-
-
-
-
 .food-type {
     padding-top: 0;
 }
 
-.vendor-name {
-    padding-bottom: 0.2rem;
+.vendor-name, .location, .star-container {
+    /* padding-bottom: 0.2rem; */
+    padding: 0 1rem;
+    display: inline-block;
+}
+
+.location {
+    font-style: italic;
+}
+
+.star-container {
+    float: right;
 }
 
 #forwards {
@@ -185,7 +193,8 @@ nav {
 }
 
 /* filter */
-.char-select {
+
+/* .char-select { */
     /* position: absolute;
     display: block;
     padding: 1rem;
@@ -193,10 +202,11 @@ nav {
     top: 20rem;
     right: 0;
     width: 20rem; */
-}
-/* .filter-item {
+/* } */
+
+.filter-item {
     display: block;
-}  */
+} 
 
 /* helper */
 .spacer {
@@ -214,7 +224,7 @@ nav {
 .grid-container {
     display: grid;
     margin: 1rem;
-    grid-template-columns: 1fr 4fr 2fr 1fr;
+    grid-template-columns: 1fr 3fr 1fr 1fr 1fr;
     grid-auto-rows: 1fr;
 }
 
@@ -225,10 +235,21 @@ nav {
     box-sizing: border-box;
 }
 
-.col-1of3 {
-    padding: 1rem;
+.col-filter1 {
     margin: 1rem;
     grid-column: 3;
     max-height: 20rem;
     box-sizing: border-box;
+}
+
+.col-filter2 {
+    margin: 1rem;
+    grid-column: 4;
+    max-height: 20rem;
+    box-sizing: border-box;
+}
+
+.block {
+    display: block;
+    height: fit-content;
 }
